@@ -1,6 +1,6 @@
 Package: car
 Version: 2.0-13
-Date: 2012/06/25
+Date: 2012/06/29
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
